fix overflow y of product list

--- a/packages/scandi-smpagebuilder/src/component/Pagebuilder/components/ProductList/ProductList.scss
+++ b/packages/scandi-smpagebuilder/src/component/Pagebuilder/components/ProductList/ProductList.scss
@@ -15,6 +15,8 @@
     width: 100%;
     flex-wrap: nowrap;
     overflow: auto;
+    overflow-y: hidden;
+    height: 100%;
 
     .images {
       width: 30%;
